@@ -6,106 +6,50 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'org.springframework.boot' version libs.versions.springBoot
-    id 'com.google.cloud.tools.jib' version libs.versions.jibPlugin
-    id "io.spring.dependency-management" version libs.versions.springDependencyPlugin
+    id 'maven-publish'
 }
 
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
+allprojects {
 
-apply plugin: 'java'
-apply plugin: 'java-library'
-apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'java'
+    apply plugin: 'java-library'
+//    apply plugin: 'io.spring.dependency-management'
 
-dependencyManagement {
-    imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
-    }
-}
-
-dependencies {
-    compileOnly libs.lombok
-    annotationProcessor libs.lombok
-
-    runtimeOnly libs.mysql
-    implementation libs.flyway.db
-    implementation libs.flyway.mysql
-    implementation libs.ehcache
-    implementation libs.jackson.xml.databind
-    implementation libs.apache.tika
-    implementation libs.jaudiotagger
-    implementation libs.micrometer.prometheus
-
-    implementation libs.spring.boot.actuator
-    implementation libs.spring.boot.cache
-    implementation libs.spring.boot.logging
-    implementation libs.spring.boot.validation
-    implementation libs.spring.boot.data.jdbc
-    implementation libs.spring.boot.data.jpa
-    implementation libs.spring.boot.web
-
-    implementation libs.spring.doc.openapi
-    implementation libs.spring.cloud.eureka.client
-
-    implementation libs.playqd.utils
-    implementation libs.playqd.data
-
-    implementation('org.yaml:snakeyaml') {
-        version {
-            strictly '2.0'
-        }
+    repositories {
+        mavenLocal()
+        mavenCentral()
     }
 
-    testImplementation libs.lombok
-    testAnnotationProcessor libs.lombok
+//    dependencyManagement {
+//        imports {
+//            mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+//        }
+//    }
 
-    testImplementation libs.junit.platform.commons
-    testRuntimeOnly libs.junit.platform.engine
-    testRuntimeOnly libs.junit.platform.launcher
-    testImplementation libs.junit.jupiter.api
-    testImplementation libs.junit.jupiter.engine
-    testImplementation libs.mockito.core
-    testImplementation libs.h2
-    testImplementation libs.spring.boot.test
-}
+    dependencies {
+        compileOnly libs.lombok
+        annotationProcessor libs.lombok
 
-jar {
-    enabled = true
-}
+        testImplementation libs.lombok
+        testAnnotationProcessor libs.lombok
 
-bootJar {
-    archiveBaseName = 'playqd-media-library'
-    mainClass = 'io.playqd.Application'
-}
-
-springBoot {
-    buildInfo()
-}
-
-jib {
-    allowInsecureRegistries = 'true'
-    from {
-        image = 'openjdk:21-slim'
+        testImplementation libs.junit.platform.commons
+        testRuntimeOnly libs.junit.platform.engine
+        testRuntimeOnly libs.junit.platform.launcher
+        testImplementation libs.junit.jupiter.api
+        testImplementation libs.junit.jupiter.engine
+        testImplementation libs.mockito.core
     }
-    to {
-        image = 'playqd-media-library'
-        tags = ["${project.version}"]
-    }
-    container {
-        mainClass = 'io.playqd.Application'
-        ports = ["8015"]
-        creationTime = "USE_CURRENT_TIMESTAMP"
-        environment = [SPRING_PROFILES_ACTIVE: "docker"]
-    }
-}
 
-test {
-    useJUnitPlatform()
-}
+    compileJava {
+        options.compilerArgs += ['--enable-preview']
+    }
 
+    test {
+        useJUnitPlatform()
+    }
+
+}
 //jacocoTestReport {
 //    dependsOn test
 //    reports {
